2008-04-24  Tim Taubert <ttmails@users.berlios.de> 

	* Analog/Kernel/V4L1, Analog/Kernel/V4L1/video_capability.cs,
	  Analog/Kernel/V4L2, Analog/Kernel/V4L2/v4l2_audio.cs,
	  Analog/Kernel/V4L2/v4l2_audioout.cs,
	  Analog/Kernel/V4L2/v4l2_buf_type.cs, Analog/Kernel/V4L2/v4l2_buffer.cs,
	  Analog/Kernel/V4L2/v4l2_capability.cs, Analog/Kernel/V4L2/v4l2_clip.cs,
	  Analog/Kernel/V4L2/v4l2_colorspace.cs,
	  Analog/Kernel/V4L2/v4l2_control.cs, Analog/Kernel/V4L2/v4l2_crop.cs,
	  Analog/Kernel/V4L2/v4l2_cropcap.cs, Analog/Kernel/V4L2/v4l2_field.cs,
	  Analog/Kernel/V4L2/v4l2_fmtdesc.cs, Analog/Kernel/V4L2/v4l2_format.cs,
	  Analog/Kernel/V4L2/v4l2_fract.cs,
	  Analog/Kernel/V4L2/v4l2_framebuffer.cs,
	  Analog/Kernel/V4L2/v4l2_frequency.cs, Analog/Kernel/V4L2/v4l2_input.cs,
	  Analog/Kernel/V4L2/v4l2_memory.cs, Analog/Kernel/V4L2/v4l2_modulator.cs,
	  Analog/Kernel/V4L2/v4l2_operation.cs, Analog/Kernel/V4L2/v4l2_output.cs,
	  Analog/Kernel/V4L2/v4l2_pix_format.cs,
	  Analog/Kernel/V4L2/v4l2_pix_format_id.cs,
	  Analog/Kernel/V4L2/v4l2_priority.cs, Analog/Kernel/V4L2/v4l2_rect.cs,
	  Analog/Kernel/V4L2/v4l2_requestbuffers.cs,
	  Analog/Kernel/V4L2/v4l2_sliced_vbi_cap.cs,
	  Analog/Kernel/V4L2/v4l2_sliced_vbi_format.cs,
	  Analog/Kernel/V4L2/v4l2_standard.cs, Analog/Kernel/V4L2/v4l2_std_id.cs,
	  Analog/Kernel/V4L2/v4l2_timecode.cs, Analog/Kernel/V4L2/v4l2_tuner.cs,
	  Analog/Kernel/V4L2/v4l2_tuner_capability.cs,
	  Analog/Kernel/V4L2/v4l2_vbi_format.cs,
	  Analog/Kernel/V4L2/v4l2_window.cs, Analog/Kernel/v4l2_audio.cs,
	  Analog/Kernel/v4l2_audioout.cs, Analog/Kernel/v4l2_buf_type.cs,
	  Analog/Kernel/v4l2_buffer.cs, Analog/Kernel/v4l2_capability.cs,
	  Analog/Kernel/v4l2_clip.cs, Analog/Kernel/v4l2_colorspace.cs,
	  Analog/Kernel/v4l2_control.cs, Analog/Kernel/v4l2_crop.cs,
	  Analog/Kernel/v4l2_cropcap.cs, Analog/Kernel/v4l2_field.cs,
	  Analog/Kernel/v4l2_fmtdesc.cs, Analog/Kernel/v4l2_format.cs,
	  Analog/Kernel/v4l2_fract.cs, Analog/Kernel/v4l2_framebuffer.cs,